--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,11 @@
 	</modules>
 
 	<properties>
-			<openmrsPlatformVersion>1.11.6</openmrsPlatformVersion>
-			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-			<powermock.version>1.4.10</powermock.version>
-			<javaCompilerVersion>1.7</javaCompilerVersion>
+		<openMRSVersion>1.11.6</openMRSVersion>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<powermock.version>1.4.10</powermock.version>
+		<javaCompilerVersion>1.7</javaCompilerVersion>
+		<openHMISCommonsVersion>3.6.0-SNAPSHOT</openHMISCommonsVersion>
 	</properties>
 
 	<dependencyManagement>
@@ -50,7 +51,7 @@
 			<dependency>
 				<groupId>org.openmrs.api</groupId>
 				<artifactId>openmrs-api</artifactId>
-				<version>${openmrsPlatformVersion}</version>
+				<version>${openMRSVersion}</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
@@ -58,7 +59,7 @@
 			<dependency>
 				<groupId>org.openmrs.web</groupId>
 				<artifactId>openmrs-web</artifactId>
-				<version>${openmrsPlatformVersion}</version>
+				<version>${openMRSVersion}</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
@@ -66,7 +67,7 @@
 			<dependency>
 				<groupId>org.openmrs.api</groupId>
 				<artifactId>openmrs-api</artifactId>
-				<version>${openmrsPlatformVersion}</version>
+				<version>${openMRSVersion}</version>
 				<type>test-jar</type>
 				<scope>test</scope>
 			</dependency>
@@ -74,7 +75,7 @@
 			<dependency>
 				<groupId>org.openmrs.web</groupId>
 				<artifactId>openmrs-web</artifactId>
-				<version>${openmrsPlatformVersion}</version>
+				<version>${openMRSVersion}</version>
 				<type>test-jar</type>
 				<scope>test</scope>
 			</dependency>
@@ -82,7 +83,7 @@
 			<dependency>
 				<groupId>org.openmrs.test</groupId>
 				<artifactId>openmrs-test</artifactId>
-				<version>${openmrsPlatformVersion}</version>
+				<version>${openMRSVersion}</version>
 				<type>pom</type>
 				<scope>test</scope>
 			</dependency>
@@ -99,23 +100,22 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-api</artifactId>
-				<version>3.5.0-SNAPSHOT</version>
+				<version>${openHMISCommonsVersion}</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
-				<artifactId>openhmis.commons-api</artifactId>
-				<version>3.5.0-SNAPSHOT</version>
-				<type>test-jar</type>
+				<artifactId>openhmis.commons-tests</artifactId>
+				<version>${openHMISCommonsVersion}</version>
 				<scope>test</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-tools</artifactId>
-				<version>3.5.0-SNAPSHOT</version>
+				<version>${openHMISCommonsVersion}</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
@@ -123,7 +123,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-omod</artifactId>
-				<version>3.5.0-SNAPSHOT</version>
+				<version>${openHMISCommonsVersion}</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
@@ -131,7 +131,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-omod_2.x</artifactId>
-				<version>3.5.0-SNAPSHOT</version>
+				<version>${openHMISCommonsVersion}</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
@@ -224,7 +224,7 @@
 						<dependency>
 							<groupId>org.openmrs.module</groupId>
 							<artifactId>openhmis.commons-tools</artifactId>
-							<version>3.4.0</version>
+							<version>${openHMISCommonsVersion}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
@@ -256,7 +256,7 @@
 						<dependency>
 							<groupId>org.openmrs.module</groupId>
 							<artifactId>openhmis.commons-tools</artifactId>
-							<version>3.4.0</version>
+							<version>${openHMISCommonsVersion}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
@@ -281,8 +281,8 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
-						<target>1.6</target>
-						<source>1.6</source>
+						<target>${javaCompilerVersion}</target>
+						<source>${javaCompilerVersion}</source>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -368,4 +368,15 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+
+	<profiles>
+		<profile>
+			<id>openmrs-2.0</id>
+			<properties>
+				<openMRSVersion>2.0.5</openMRSVersion>
+				<javaCompilerVersion>1.8</javaCompilerVersion>
+			</properties>
+		</profile>
+	</profiles>
+
 </project>
