--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>patientlist</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 	</parent>
 
 	<artifactId>patientlist-omod</artifactId>
